# sysclean

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_CN.md
.github/workflows/: release.yml
.superpowers/brainstorm/4592-20260326210628/content/: layout-options.html
.superpowers/brainstorm/4592-20260326210628/state/: server-info  server-stopped
docs/superpowers/plans/: 2026-03-26-header-footer-progress-implementation.md
docs/superpowers/specs/: 2026-03-26-tui-header-footer-progress-design.md
src/: app.rs  cache_cleaner.rs  i18n.rs  lib.rs  main.rs  models.rs  persistence.rs  platform.rs  space_explorer.rs  ui.rs
tests/: app_flow.rs  cache_discovery.rs  cache_progressive_behavior.rs  cleanup_preview.rs  explorer_behavior.rs  explorer_paging.rs  i18n_behavior.rs  persistence_behavior.rs  progressive_scanning.rs  task_status_behavior.rs
wix/: License.rtf  main.wxs
