[package]
name = "sysclean"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
