[package]
name = "sysclean"
version = "0.2.0"
edition = "2024"
authors = ["dlivxpr"]
description = "A TUI disk cleanup tool for Windows 11, focused on dev tool cache cleanup and home directory space analysis"
license = "MIT"
repository = "https://github.com/dlivxpr/sysclean"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
